# web_crawler

./: Cargo.toml  LICENSE  README.md  create_seed_table.sql
db/: url_list.sql
src/: crawler.rs  fetch.rs  main.rs
src/es/: es.rs  mod.rs
src/metadata/: metadata.rs  mod.rs
src/web_crawler/: crawler.rs  fetch.rs  link_checker.rs  mod.rs  parse.rs  robots.rs
