[package]
name = "web_crawler"
version = "0.1.0"
authors = ["Thorsten Claus <thorstenclaus@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.10"
hyper-native-tls = "0.3.0"
html5ever = "0.21.0"
url = "2.0.0"

