[package]
name = "web_crawler"
version = "0.1.0"
authors = ["Thorsten Claus <thorstenclaus@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
hyper = "0.10"
hyper-native-tls = "0.3.0"
html5ever = "0.24.0"
url = "2.0.0"
postgres = "0.15.2"
robots_txt =  { path = "../robots_txt" }

bloom = "0.3.2" # Dupes finder

elastic = "0.21.0-pre.5"
elastic_derive = "0.21.0-pre.5"
serde = "~1"
serde_json = "~1"
serde_derive = "~1"
select = "0.4.3"
md5 = "*"
base64 = "*"
