[package]
name = "web_crawler"
version = "0.1.1"
description = "Web crawler, spider to get indexable informations out of websites, puts them to an elastic search instance. Works hand-in-hand withn Search-UI."
authors = ["Thorsten Claus <thorstenclaus@web.de>"]
repository = "https://github.com/tclaus/web_crawler"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "*"
hyper = "0.10"
chrono = "0.4"
hyper-native-tls = "0.3"
html5ever = "*"
url = "2.1"
postgres = { version = "0.17", features = ["with-chrono-0_4"] }
robots_txt = { git ="https://github.com/tclaus/robots_txt.git"}

bloom = "0.3.2" # Dupes finder

elastic = "0.21.0-pre.5"
elastic_derive = "0.21.0-pre.5"
serde = "~1"
serde_json = "~1"
serde_derive = "~1"
select = "0.4.3"
md5 = "*"
base64 = "*"
